Experience page layout changes, fixed lots of layout bugs. Made whole bottom of windows clickable button

--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ html {
 }
 
 .wrapper-content {
-    width: 1150px;
+    width: 100%; 
     /* border: 1px solid black; */
     overflow: hidden;
 }
@@ -87,17 +87,18 @@ html {
 .landing-left {
     float: left;
     /* border: 1px solid red; */
-    width: 470px;
+    width: 35vw;
     height: 600px;
     margin: 10px;
 }
 
 .landing-right {
-    float: left;
+    float: right;
     /* border: 1px solid blue; */
     width: auto;
     height: 600px;
     margin: 10px;
+    margin-right: 50px;
 }
 
 .side-nav-right {
@@ -148,7 +149,7 @@ html {
 }
 
 .about-me-card {
-    width: 360px;
+    width: 80%;
     padding-left: 60px;
     padding-top: 30px;
 }
@@ -168,7 +169,7 @@ html {
 
 .gif-coding {
     padding-left: 60px; 
-    margin-top: 24px;
+    margin-top: 78px;
     width: 224px; 
     height: 168px;
 }
@@ -224,7 +225,7 @@ html {
 }
 
 .job-date-wrapper {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .job-date {
@@ -239,22 +240,25 @@ html {
     /* border: 1px solid green; */
     margin: auto;
     text-align: center;
-    margin-bottom: 5px;
     margin-top: 5px;
+    margin-bottom: 0px;
 }
 
 .expand-arrow {
     margin: auto;
-    border: 2px solid black;
-    border-radius: 50%;
-    width: 48px;
-    height: 48px;
+    /* border: 2px solid black; */
+    /* border-radius: 50%; */
+    width: 100%;
+    height: 100%;
     margin-top: 10px;
     display: inline-block;
+    vertical-align: bottom;
+    text-align: center;
 }
 
 .expand-arrow:hover {
-    border: 2px solid #58595b;
+    /* border: 1px solid green; */
+    background-color:#D9DDDC;
 }
 
 .job-expand-wrapper {
